# pyblock

./: .azure-pipelines.yml  .codecov.yml  .gitignore  .travis.yml  CITATION.cff  README.rst  pyproject.toml  setup.py
.ci/: azure-steps.yml  miniconda.sh
.github/workflows/: package.yml  test.yml
docs/: conf.py
pyblock/: __init__.py  blocking.py  error.py  pd_utils.py  plot.py
pyblock/tests/: base.py  template.py  test_blocking.py  test_error.py  test_pd_utils.py
