[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pyblock"
license = "BSD-3-Clause"
author = "James S. Spencer"
requires=[
    "numpy",
]
requires-python = "~=3.6"
description-file = "README.rst"
home-page = "https://pyblock.readthedocs.io"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
]

[tool.flit.metadata.requires-extra]
test = [
    "codecov",
    "coverage",
    "pytest",
    "pytest-cov",
]
opts = [
    "matplotlib",
    "pandas",
]
doc = [
    "sphinx",
]
